--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "luxe-3d-flipbook",
+  "name": "AlHilali 3D Portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
